k8s-manifests/krosslab_dev/nginx-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
      name: nginx-2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
