k8s-manifests/krosslab_dev/nginx-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-2
  namespace: default
spec:
  ports:
  - name: nginx-2
    port: 80
    targetPort: 80
  selector:
    app: nginx-2
  type: ClusterIP
