k8s-manifests/krosslab_dev/nginx-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-2
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/group.name: "krosslab-dev-public"
    alb.ingress.kubernetes.io/group.order: "200"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: nginx-2-test.krosslab.io
    http:
      paths:
      - backend:
          service:
            name: nginx-2
            port:
              number: 80
        pathType: ImplementationSpecific
